Adding layout and activities for single song. Make that title in band change with band.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="all_songs">All Songs</string>
     <string name="music_bands_singers">Music bands Singers</string>
     <string name="favorite">Favorite</string>
+    <string name="bandTitle">String band</string>
 </resources>
