--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="all_songs">All Songs</string>
     <string name="music_bands_singers">Music bands Singers</string>
     <string name="favorite">Favorite</string>
-    <string name="serach_song">Search a song</string>
+    <string name="serach_song">Search song</string>
 </resources>
