--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="all_songs">All Songs</string>
     <string name="music_bands_singers">Music bands Singers</string>
+    <string name="music_bands">Music bands</string>
     <string name="favorite">Favorite</string>
-    <string name="serach_song">Search song</string>
+    <string name="search_song">Search song</string>
+    <string name="main_activity">Start page</string>
 </resources>
